--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_general_overview_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OverviewActivity">
+    android:orientation="vertical">
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/advertisement_overview_activity_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/advertisement_unit_id" />
 
     <FrameLayout
         android:id="@+id/frame_layout_search_filter"
@@ -32,18 +41,24 @@
             android:src="@drawable/ic_tune_black_24dp" />
     </FrameLayout>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/advertisement_overview_activity_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/advertisement_unit_id" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/frame_layout_search_filter">
+        android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/overview_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/searchFilter"
-            app:layout_constraintTop_toBottomOf="@+id/searchFilter"
             tools:layout_editor_absoluteX="0dp" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-</RelativeLayout>
+</LinearLayout>
