--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/flatWhiteSmoke"
@@ -13,11 +14,21 @@
         android:fillViewport="true">
 
         <LinearLayout
+            android:id="@+id/layout_detail_scroll_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp"
             android:weightSum="1">
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/advertisement_detail_activity_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
 
             <TextView
                 android:id="@+id/titleStrength"
@@ -273,6 +284,15 @@
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/advertisement_detail_activity_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center|bottom"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
