--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -292,6 +292,7 @@
                     android:layout_gravity="end">
 
                     <Button
+                        android:id="@+id/detail_button_undo_memo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Undo"
@@ -301,6 +302,7 @@
                         android:textColor="@color/flatWhiteSmoke" />
 
                     <Button
+                        android:id="@+id/detail_button_register_memo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Register"
