--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,192 +10,206 @@
     android:paddingTop="10dp"
     android:paddingEnd="10dp">
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/advertisement_settings_activity_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="10dp"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/advertisement_unit_id" />
-
-    <TextView
-        android:id="@+id/setting_general"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="@string/setting_general"
-        android:textColor="@color/flatLightCoral"
-        android:textSize="17sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/layout_settings_scroll_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/setting_general_list_item_title"
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/advertisement_settings_activity_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/setting_title_sync_on_wi_fi_only"
-                android:textColor="@color/flatBunker"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
 
             <TextView
-                android:id="@+id/setting_general_list_item_summary"
+                android:id="@+id/setting_general"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/setting_summary_sync_data_only_when_connected_to_wi_fi" />
+                android:layout_marginBottom="10dp"
+                android:text="@string/setting_general"
+                android:textColor="@color/flatLightCoral"
+                android:textSize="17sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/setting_general_list_item_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setting_title_sync_on_wi_fi_only"
+                        android:textColor="@color/flatBunker"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/setting_general_list_item_summary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setting_summary_sync_data_only_when_connected_to_wi_fi" />
+                </LinearLayout>
+
+                <Switch
+                    android:id="@+id/setting_general_list_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/setting_layout_auto_sync_interval"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/setting_title_auto_sync_interval"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Auto sync interval"
+                        android:textColor="@color/flatBunker"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/setting_summary_auto_sync_interval"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tap here to set auto sync interval" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/setting_image_auto_sync_interval"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_open_in_new_black_24dp" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/line_horizontal_center"
+                android:layout_width="wrap_content"
+                android:layout_height="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/flatSolitude"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/setting_user_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/setting_user_information"
+                android:textColor="@color/flatLightCoral"
+                android:textSize="17sp" />
+
+            <LinearLayout
+                android:id="@+id/setting_layout_register_user_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/setting_user_list_item_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Register user information"
+                        android:textColor="@color/flatBunker"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/setting_user_list_item_summary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setting_summary_register_user_information" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/setting_image_register_user_information"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_open_in_new_black_24dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/setting_layout_clear_user_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/setting_clear_user_information_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Clear user information"
+                        android:textColor="@color/flatBunker"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/setting_clear_user_information_summary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/setting_summary_clear_user_information" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/setting_image_clear_user_information"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_open_in_new_black_24dp" />
+            </LinearLayout>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/advertisement_settings_activity_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginTop="20dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
         </LinearLayout>
-
-        <Switch
-            android:id="@+id/setting_general_list_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/setting_layout_auto_sync_interval"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/setting_title_auto_sync_interval"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Auto sync interval"
-                android:textColor="@color/flatBunker"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/setting_summary_auto_sync_interval"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tap here to set auto sync interval" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/setting_image_auto_sync_interval"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_open_in_new_black_24dp" />
-    </LinearLayout>
-
-    <View
-        android:id="@+id/line_horizontal_center"
-        android:layout_width="wrap_content"
-        android:layout_height="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/flatSolitude"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/setting_user_information"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/setting_user_information"
-        android:textColor="@color/flatLightCoral"
-        android:textSize="17sp" />
-
-    <LinearLayout
-        android:id="@+id/setting_layout_register_user_information"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/setting_user_list_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Register user information"
-                android:textColor="@color/flatBunker"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/setting_user_list_item_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/setting_summary_register_user_information" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/setting_image_register_user_information"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_open_in_new_black_24dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/setting_layout_clear_user_information"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/setting_clear_user_information_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Clear user information"
-                android:textColor="@color/flatBunker"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/setting_clear_user_information_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/setting_summary_clear_user_information" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/setting_image_clear_user_information"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_open_in_new_black_24dp" />
-    </LinearLayout>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/advertisement_settings_activity_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_marginTop="20dp"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+    </ScrollView>
 </LinearLayout>
