--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:background="@color/flatWhiteSmoke"
     android:orientation="vertical"
     tools:context="dev.app.ks.thinkit.duovoc.LoginActivity">
@@ -19,12 +20,20 @@
             android:orientation="vertical"
             android:weightSum="1">
 
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/loginAdViewTop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
+
             <TextView
                 android:id="@+id/aboutLoginInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="65dp"
-                android:layout_marginTop="110dp"
+                android:layout_marginTop="90dp"
                 android:layout_marginRight="65dp"
                 android:gravity="center"
                 android:text="Welcome to Duovoc"
@@ -165,6 +174,15 @@
                 android:gravity="center"
                 android:text="@string/login_sign_up_for_account"
                 android:textSize="18sp" />
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/loginAdViewBottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
