--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/flatWhiteSmoke"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="10dp"
     android:paddingTop="10dp"
@@ -20,6 +21,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="1">
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/settingsAdViewTop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
 
             <TextView
                 android:id="@+id/setting_general"
@@ -201,6 +210,14 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/settingsAdViewBottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/advertisement_unit_id" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
