--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/detailAdViewTop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
                 ads:adSize="BANNER"
                 ads:adUnitId="@string/banner_advertisement_unit_id" />
@@ -316,6 +317,7 @@
                 android:id="@+id/detailAdViewBottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
                 ads:adSize="BANNER"
                 ads:adUnitId="@string/banner_advertisement_unit_id" />
